@@ -1,25 +1,23 @@
 package org.cardanofoundation.rosetta.consumer.service.impl;
 
-import org.cardanofoundation.rosetta.consumer.aggregate.AggregatedTxIn;
-import org.cardanofoundation.rosetta.common.entity.ReferenceTxIn;
-import org.cardanofoundation.rosetta.common.entity.ReferenceTxIn.ReferenceTxInBuilder;
-import org.cardanofoundation.rosetta.common.entity.Tx;
-import org.cardanofoundation.rosetta.common.entity.TxOut;
-import org.cardanofoundation.rosetta.consumer.repository.cached.CachedReferenceInputRepository;
-import org.cardanofoundation.rosetta.consumer.service.ReferenceInputService;
-import org.cardanofoundation.rosetta.consumer.service.TxOutService;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.cardanofoundation.rosetta.common.entity.ReferenceTxIn;
+import org.cardanofoundation.rosetta.common.entity.ReferenceTxIn.ReferenceTxInBuilder;
+import org.cardanofoundation.rosetta.common.entity.Tx;
+import org.cardanofoundation.rosetta.common.entity.TxOut;
+import org.cardanofoundation.rosetta.consumer.aggregate.AggregatedTxIn;
+import org.cardanofoundation.rosetta.consumer.repository.ReferenceInputRepository;
+import org.cardanofoundation.rosetta.consumer.service.ReferenceInputService;
+import org.cardanofoundation.rosetta.consumer.service.TxOutService;
 import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
+
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Slf4j
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
@@ -27,42 +25,48 @@ import org.springframework.stereotype.Service;
 @Service
 public class ReferenceInputServiceImpl implements ReferenceInputService {
 
-  CachedReferenceInputRepository cachedReferenceInputRepository;
+  ReferenceInputRepository referenceInputRepository;
   TxOutService txOutService;
 
   @Override
   public List<ReferenceTxIn> handleReferenceInputs(
-      Map<String, Set<AggregatedTxIn>> referenceTxInMap, Map<String, Tx> txMap) {
+      Map<String, Set<AggregatedTxIn>> referenceTxInMap, Map<String, Tx> txMap,
+      Map<Pair<String, Short>, TxOut> newTxOutMap) {
     Set<AggregatedTxIn> allReferenceTxIns = referenceTxInMap.values()
         .stream()
         .flatMap(Collection::stream)
         .collect(Collectors.toSet());
-    Map<Pair<String, Integer>, TxOut> txOutMap = txOutService
+    Map<Pair<String, Short>, TxOut> txOutMap = txOutService
         .getTxOutCanUseByAggregatedTxIns(allReferenceTxIns)
         .stream()
         .collect(Collectors.toMap(this::getTxOutKey, Function.identity()));
-    return cachedReferenceInputRepository.saveAll(
+    return referenceInputRepository.saveAll(
         referenceTxInMap.entrySet().stream().flatMap(txHashReferenceTxInsEntry -> {
           Set<AggregatedTxIn> referenceTxIns = txHashReferenceTxInsEntry.getValue();
           String txHash = txHashReferenceTxInsEntry.getKey();
           Tx tx = txMap.get(txHash);
           return referenceTxIns.stream()
-              .map(referInput -> handleReferenceInput(tx, referInput, txOutMap));
-        }).collect(Collectors.toList())
+              .map(referInput -> handleReferenceInput(tx, referInput, txOutMap, newTxOutMap));
+        }).toList()
     );
   }
 
-  private Pair<String, Integer> getTxOutKey(TxOut txOut) {
-    return Pair.of(txOut.getTx().getHash(), (int) txOut.getIndex());
+  private Pair<String, Short> getTxOutKey(TxOut txOut) {
+    return Pair.of(txOut.getTx().getHash(), txOut.getIndex());
   }
 
-  public ReferenceTxIn handleReferenceInput(Tx tx,
-      AggregatedTxIn referenceInput, Map<Pair<String, Integer>, TxOut> txOutMap) {
+  public ReferenceTxIn handleReferenceInput(Tx tx, AggregatedTxIn referenceInput,
+                                            Map<Pair<String, Short>, TxOut> txOutMap,
+                                            Map<Pair<String, Short>, TxOut> newTxOutMap) {
     ReferenceTxInBuilder<?, ?> referenceTxInBuilder = ReferenceTxIn.builder();
     referenceTxInBuilder.txIn(tx);
-
-    Pair<String, Integer> txOutKey = Pair.of(referenceInput.getTxId(), referenceInput.getIndex());
+    Pair<String, Short> txOutKey =
+        Pair.of(referenceInput.getTxId(), (short) referenceInput.getIndex());
     TxOut txOut = txOutMap.get(txOutKey);
+    if (Objects.isNull(txOut)) {
+      txOut = newTxOutMap.get(txOutKey);
+    }
+
     referenceTxInBuilder.txOut(txOut.getTx());
     referenceTxInBuilder.txOutIndex(txOut.getIndex());
     return referenceTxInBuilder.build();
